--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
     <!--
       The views will be rendered in the <ion-nav-view> directive below
       Templates are in the /templates folder (but you could also
-      have templates inline in this html file if you'd like).
+      have templates inline in this html file if you'd like). test
     -->
     <ion-nav-view></ion-nav-view>
   </body>
